fix hero alignment

--- a/css/_uswds-theme-custom-styles.scss
+++ b/css/_uswds-theme-custom-styles.scss
@@ -1253,11 +1253,10 @@ body {
 // TOOLKITS ----------------- //
 
 .toolkit-hero-image {
-  margin-left: -100px;
-  margin-bottom: units(5);
-  margin-right: units(5);
+  @include at-media("desktop") {
+    margin-left: -50px;
+  }
   display: inline;
-
 }
 
 .toolkit-colored-div {
